--- a/layout/app.glade
+++ b/layout/app.glade
@@ -52,6 +52,7 @@ Author: Jackson de Oliveira
     <property name="resizable">False</property>
     <property name="window_position">center</property>
     <property name="icon">../images/app-gerenciador.png</property>
+    <signal name="activate-default" handler="on_window_main_activate_default" swapped="no"/>
     <signal name="delete-event" handler="on_window_main_delete_event" swapped="no"/>
     <child type="titlebar">
       <placeholder/>
@@ -515,6 +516,7 @@ Author: Jackson de Oliveira
         </child>
       </object>
     </child>
+    <accelerator key="e" signal="activate-default" modifiers="GDK_MOD1_MASK"/>
   </object>
   <object class="GtkAboutDialog" id="about_dialog">
     <property name="can_focus">False</property>
