--- a/layout/app.glade
+++ b/layout/app.glade
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1  -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkImage" id="img_cafe">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixbuf">../images/app-cafe.png</property>
-  </object>
   <object class="GtkListStore" id="list_store">
     <columns>
       <!-- column-name # -->
@@ -415,59 +410,6 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHeaderBar">
-            <property name="width_request">686</property>
-            <property name="height_request">43</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="border_width">0</property>
-            <property name="has_subtitle">False</property>
-            <child>
-              <object class="GtkMenuBar">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="halign">baseline</property>
-                <child>
-                  <object class="GtkMenuItem">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Ajuda</property>
-                    <child type="submenu">
-                      <object class="GtkMenu">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <child>
-                          <object class="GtkImageMenuItem" id="doacao">
-                            <property name="label" translatable="yes">Me pague um café</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="image">img_cafe</property>
-                            <property name="use_stock">False</property>
-                            <signal name="activate" handler="on_doacao_activate" swapped="no"/>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkImageMenuItem" id="about">
-                            <property name="label">gtk-about</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="use_underline">True</property>
-                            <property name="use_stock">True</property>
-                            <signal name="activate" handler="on_about_activate" swapped="no"/>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="y">-1</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkButton" id="btn_excluir">
             <property name="label" translatable="yes">Excluir</property>
             <property name="width_request">65</property>
@@ -496,6 +438,38 @@
             <property name="x">535</property>
             <property name="y">398</property>
           </packing>
+        </child>
+        <child>
+          <object class="GtkButtonBox" id="btn_box">
+            <property name="width_request">85</property>
+            <property name="height_request">40</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="margin_left">5</property>
+            <property name="margin_top">5</property>
+            <property name="spacing">5</property>
+            <property name="layout_style">start</property>
+            <child>
+              <object class="GtkMenuButton" id="btn_menu">
+                <property name="width_request">75</property>
+                <property name="height_request">40</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="relief">half</property>
+                <property name="popup">menu1</property>
+                <property name="direction">none</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+          </object>
         </child>
       </object>
     </child>
@@ -562,6 +536,28 @@ E-mail: mr.jkolive@gmail.com</property>
         <child>
           <placeholder/>
         </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkMenu" id="menu1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <child>
+      <object class="GtkMenuItem" id="doacao">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Pague-me um café</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_doacao_activate" swapped="no"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="about">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Sobre</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_about_activate" swapped="no"/>
       </object>
     </child>
   </object>
