--- a/layout/app.glade
+++ b/layout/app.glade
@@ -12,6 +12,43 @@
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkMenu" id="menu1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <child>
+      <object class="GtkMenuItem" id="ferramentas">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Ferramentas</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_ferramentas_activate" swapped="no"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSeparatorMenuItem">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="doacao">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Doação com Paypal</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_doacao_activate" swapped="no"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="about">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Sobre</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_about_activate" swapped="no"/>
+      </object>
+    </child>
+  </object>
   <object class="GtkWindow" id="window_main">
     <property name="width_request">686</property>
     <property name="height_request">555</property>
@@ -34,38 +71,6 @@
         <property name="can_focus">False</property>
         <property name="width">700</property>
         <property name="height">520</property>
-        <child>
-          <object class="GtkButton" id="btn_gravar">
-            <property name="label" translatable="yes">Gravar</property>
-            <property name="width_request">65</property>
-            <property name="height_request">34</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="tooltip_text" translatable="yes">Grava alterações.</property>
-            <signal name="clicked" handler="on_btn_gravar_clicked" swapped="no"/>
-          </object>
-          <packing>
-            <property name="x">540</property>
-            <property name="y">514</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton" id="btn_fechar">
-            <property name="label" translatable="yes">Fechar</property>
-            <property name="width_request">65</property>
-            <property name="height_request">34</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="tooltip_text" translatable="yes">Fecha o aplicativo.</property>
-            <signal name="clicked" handler="on_btn_fechar_clicked" swapped="no"/>
-          </object>
-          <packing>
-            <property name="x">607</property>
-            <property name="y">514</property>
-          </packing>
-        </child>
         <child>
           <object class="GtkFrame" id="frm_inicia_parar">
             <property name="width_request">675</property>
@@ -187,7 +192,7 @@
           </object>
           <packing>
             <property name="x">5</property>
-            <property name="y">235</property>
+            <property name="y">237</property>
           </packing>
         </child>
         <child>
@@ -200,7 +205,7 @@
             <child>
               <object class="GtkFixed">
                 <property name="width_request">32</property>
-                <property name="height_request">32</property>
+                <property name="height_request">166</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">start</property>
@@ -245,21 +250,6 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="txt_nome_servidor">
-                    <property name="width_request">330</property>
-                    <property name="height_request">30</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="tooltip_text" translatable="yes">Informe o nome do servidor.</property>
-                    <property name="margin_bottom">5</property>
-                    <property name="max_length">30</property>
-                    <property name="input_hints">GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
-                  </object>
-                  <packing>
-                    <property name="x">220</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkEntry" id="txt_mem_cache">
                     <property name="width_request">330</property>
                     <property name="height_request">30</property>
@@ -268,7 +258,6 @@
                     <property name="tooltip_text" translatable="yes">Informe  a quantidade de memória para o Banco de dados.</property>
                     <property name="margin_bottom">5</property>
                     <property name="max_length">30</property>
-                    <property name="input_hints">GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
                     <signal name="key-release-event" handler="on_txt_mem_cache_key_release_event" swapped="no"/>
                   </object>
                   <packing>
@@ -292,56 +281,57 @@
                 <child>
                   <object class="GtkScrolledWindow" id="scroll_param1">
                     <property name="width_request">330</property>
+                    <property name="height_request">48</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="kinetic_scrolling">False</property>
+                    <property name="shadow_type">in</property>
                     <child>
-                      <object class="GtkViewport">
+                      <object class="GtkTextView" id="txt_param_rede">
+                        <property name="width_request">100</property>
+                        <property name="height_request">46</property>
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="margin_bottom">10</property>
-                        <property name="shadow_type">none</property>
-                        <child>
-                          <object class="GtkTextView" id="txt_param_rede">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="accepts_tab">False</property>
-                            <property name="input_hints">GTK_INPUT_HINT_NO_SPELLCHECK | GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
-                          </object>
-                        </child>
+                        <property name="can_focus">True</property>
                       </object>
                     </child>
                   </object>
                   <packing>
-                    <property name="x">221</property>
-                    <property name="y">67</property>
+                    <property name="x">220</property>
+                    <property name="y">65</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkEntry" id="txt_nome_servidor">
+                    <property name="width_request">330</property>
+                    <property name="height_request">30</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="tooltip_text" translatable="yes">Informe o nome do servidor.</property>
+                    <property name="margin_bottom">5</property>
+                    <property name="max_length">30</property>
+                  </object>
+                  <packing>
+                    <property name="x">220</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkScrolledWindow" id="scroll_param2">
-                    <property name="width_request">330</property>
+                    <property name="width_request">329</property>
+                    <property name="height_request">48</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="kinetic_scrolling">False</property>
+                    <property name="shadow_type">in</property>
                     <child>
-                      <object class="GtkViewport">
+                      <object class="GtkTextView" id="txt_param_servidor">
+                        <property name="width_request">100</property>
+                        <property name="height_request">80</property>
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="margin_bottom">10</property>
-                        <child>
-                          <object class="GtkTextView" id="txt_param_servidor">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="accepts_tab">False</property>
-                            <property name="input_hints">GTK_INPUT_HINT_NO_SPELLCHECK | GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
-                          </object>
-                        </child>
+                        <property name="can_focus">True</property>
                       </object>
                     </child>
                   </object>
                   <packing>
-                    <property name="x">221</property>
-                    <property name="y">111</property>
+                    <property name="x">220</property>
+                    <property name="y">116</property>
                   </packing>
                 </child>
               </object>
@@ -356,7 +346,7 @@
           </object>
           <packing>
             <property name="x">5</property>
-            <property name="y">54</property>
+            <property name="y">49</property>
           </packing>
         </child>
         <child>
@@ -410,36 +400,6 @@
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="btn_excluir">
-            <property name="label" translatable="yes">Excluir</property>
-            <property name="width_request">65</property>
-            <property name="height_request">34</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <signal name="clicked" handler="on_btn_excluir_clicked" swapped="no"/>
-          </object>
-          <packing>
-            <property name="x">607</property>
-            <property name="y">398</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton" id="btn_incluir">
-            <property name="label" translatable="yes">Incluir</property>
-            <property name="width_request">65</property>
-            <property name="height_request">34</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <signal name="clicked" handler="on_btn_incluir_clicked" swapped="no"/>
-          </object>
-          <packing>
-            <property name="x">535</property>
-            <property name="y">398</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkButtonBox" id="btn_box">
             <property name="width_request">85</property>
             <property name="height_request">40</property>
@@ -471,6 +431,94 @@
             </child>
           </object>
         </child>
+        <child>
+          <object class="GtkBox">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="spacing">6</property>
+            <child>
+              <object class="GtkButton" id="btn_gravar">
+                <property name="label" translatable="yes">Gravar</property>
+                <property name="width_request">65</property>
+                <property name="height_request">34</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Grava alterações.</property>
+                <signal name="clicked" handler="on_btn_gravar_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="btn_fechar">
+                <property name="label" translatable="yes">Fechar</property>
+                <property name="width_request">65</property>
+                <property name="height_request">34</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Fecha o aplicativo.</property>
+                <signal name="clicked" handler="on_btn_fechar_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="x">543</property>
+            <property name="y">512</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="spacing">6</property>
+            <child>
+              <object class="GtkButton" id="btn_incluir">
+                <property name="label" translatable="yes">Incluir</property>
+                <property name="width_request">65</property>
+                <property name="height_request">34</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="on_btn_incluir_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="btn_excluir">
+                <property name="label" translatable="yes">Excluir</property>
+                <property name="width_request">65</property>
+                <property name="height_request">34</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="on_btn_excluir_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="x">537</property>
+            <property name="y">398</property>
+          </packing>
+        </child>
       </object>
     </child>
     <accelerator key="e" signal="activate-default" modifiers="GDK_MOD1_MASK"/>
@@ -484,7 +532,7 @@
     <property name="program_name">Gerenciador de Banco de Dados - Sybase</property>
     <property name="version">Versão: 1.0.0</property>
     <property name="copyright" translatable="yes">Copyright (c) 2019 Jackson de Oliveira</property>
-    <property name="website">opensourcesolution.com.br</property>
+    <property name="website">http://www.opensourcesolution.com.br</property>
     <property name="website_label" translatable="yes">Open Source Solution</property>
     <property name="license" translatable="yes">MIT License
 
@@ -536,28 +584,6 @@ E-mail: mr.jkolive@gmail.com</property>
         <child>
           <placeholder/>
         </child>
-      </object>
-    </child>
-  </object>
-  <object class="GtkMenu" id="menu1">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <child>
-      <object class="GtkMenuItem" id="doacao">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Pague-me um café</property>
-        <property name="use_underline">True</property>
-        <signal name="activate" handler="on_doacao_activate" swapped="no"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="about">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Sobre</property>
-        <property name="use_underline">True</property>
-        <signal name="activate" handler="on_about_activate" swapped="no"/>
       </object>
     </child>
   </object>
